syntax = "proto3";

package msg;

message AttackBroadCast {
	string Name = 1;
	int32 RoomId = 2;
}